Fixing the align items of the icons

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -395,6 +395,7 @@ body {
     .links span {
         display: flex;
         align-content: center;
+		align-items: center;
     }
 
     .links span a {
